@@ -2,3 +2,43 @@ Sun Jul 17 03:52:08 2016 --> [BEGIN] New log file started. To review old log fil
 Wed Aug  3 00:40:26 2016 --> [ LOG ] Lobsang.begin() called.
 Wed Aug  3 00:40:27 2016 --> [WARN ] Duino did not respond to 'OK?' query. Resetting...
 Wed Aug  3 00:40:28 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:04:49 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:04:49 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:04:56 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:04:57 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:06:15 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:06:16 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:06:22 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:06:22 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:08:55 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:08:56 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:09:01 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:09:02 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:11:12 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:11:12 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:11:19 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:11:20 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:29:37 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:29:38 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:29:44 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:29:45 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:31:12 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:31:12 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:31:19 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:31:20 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:32:33 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:32:34 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:32:39 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:32:40 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:35:27 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:35:27 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:35:33 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:35:33 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:39:03 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:39:04 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:39:12 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:39:12 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:40:14 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:40:15 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
+Wed Aug  3 02:40:20 2016 --> [ LOG ] Lobsang.begin() called.
+Wed Aug  3 02:40:21 2016 --> [ LOG ] Duino responded to 'OK?' query. Duino Online.
